[gd_scene load_steps=6 format=3 uid="uid://db6ik6psmw16n"]

[ext_resource type="Script" path="res://Interactable_Objects/portal/portal.gd" id="1_12ur0"]
[ext_resource type="Texture2D" uid="uid://cujlprbr8j0tl" path="res://Interactable_Objects/portal/portal_blue.png" id="2_wf6l0"]
[ext_resource type="Texture2D" uid="uid://gk6dlc3h18t5" path="res://Interactable_Objects/portal/portal_orange.png" id="3_frhki"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jhfkp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pfj0y"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_12ur0")

[node name="Portal1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal1"]
shape = SubResource("CapsuleShape2D_jhfkp")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Portal1"]
scale = Vector2(0.3925, 0.3925)
texture = ExtResource("2_wf6l0")
metadata/_edit_group_ = true

[node name="Portal2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal2"]
shape = SubResource("CapsuleShape2D_pfj0y")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Portal2"]
position = Vector2(-7.10543e-15, -5.96046e-08)
scale = Vector2(0.3925, 0.3925)
texture = ExtResource("3_frhki")
metadata/_edit_group_ = true

[connection signal="body_entered" from="Portal1" to="." method="_on_portal_1_body_entered"]
[connection signal="body_entered" from="Portal2" to="." method="_on_portal_2_body_entered"]
